--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,6 +17,11 @@
       "type": "image/png",
       "sizes": "512x512"
     }
+	{
+		"src": "epticalogo.jpg",
+		"type": "image/jpg"
+		"sizes": "200x41"
+	}
   ],
   "start_url": ".",
   "display": "standalone",
